--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@taroify/core": "^0.0.29-alpha.3",
     "@tarojs/components": "3.4.3",
     "@tarojs/plugin-framework-react": "3.4.3",
     "@tarojs/react": "3.4.3",
